# rust-faker

./: .gitignore  Cargo.toml  README.md  test_variance.rs
docs/plans/: 2025-01-20-address-cache-design.md  2025-01-20-address-cache-implementation.md  2026-01-16-rust-faker-design.md  2026-01-16-rust-faker-implementation.md
src/: cache.rs  download.rs  main.rs  regions.rs  writer.rs
src/generators/: addresses.rs  mod.rs  names.rs
tests/: integration_test.rs
