[package]
name = "rust-faker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
csv = "1.3"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
